--- a/index.html
+++ b/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Jiaying He - Contemporary Music Composer based in Germany. Orchestral, chamber, and electronic music." />
-    <meta name="keywords" content="Jiaying He, composer, contemporary music, new music, Folkwang, CNSMDP, orchestral music" />
-    <meta property="og:title" content="Jiaying He - Composer" />
-    <meta property="og:description" content="Contemporary Music Composer" />
-    <meta property="og:type" content="website" />
-    <title>Jiaying He | Composer</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- SEO Meta Tags -->
+  <title>Jiaying He | Contemporary Music Composer</title>
+  <meta name="description" content="Jiaying He is a Chinese contemporary music composer based in Essen, Mannheim, and Paris. Her work integrates instrumental composition, electronics, and interdisciplinary practices." />
+  <meta name="keywords" content="Jiaying He, composer, contemporary music, classical music, new music, Essen, Paris, Mannheim, composition" />
+  <meta name="author" content="Jiaying He" />
+  
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="Jiaying He | Contemporary Music Composer" />
+  <meta property="og:description" content="Chinese contemporary music composer based in Essen, Mannheim, and Paris." />
+  <meta property="og:image" content="https://hejiaying-composer.de/images/profile.jpg" />
+  <meta property="og:url" content="https://hejiaying-composer.de" />
+  <meta property="og:type" content="website" />
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Jiaying He | Contemporary Music Composer" />
+  <meta name="twitter:description" content="Chinese contemporary music composer based in Essen, Mannheim, and Paris." />
+  <meta name="twitter:image" content="https://hejiaying-composer.de/images/profile.jpg" />
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://hejiaying-composer.de" />
+  
+  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+</head>
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
 </html>
