--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
   
   <!-- SEO Meta Tags -->
   <title>Jiaying He | Contemporary Music Composer</title>
-  <meta name="description" content="Jiaying He is a Chinese contemporary music composer based in Essen, Mannheim, and Paris. Her work integrates instrumental composition, electronics, and interdisciplinary practices." />
-  <meta name="keywords" content="Jiaying He, composer, contemporary music, classical music, new music, Essen, Paris, Mannheim, composition" />
+  <meta name="description" content="Jiaying He is a Chinese contemporary music composer based in Essen, Mannheim, and Paris. Her work integrates instrumental composition, electronics, and interdisciplinary practices including dance, video, and performance." />
+  <meta name="keywords" content="Jiaying He, composer, contemporary music, classical music, new music, Essen, Paris, Mannheim, composition, Chinese composer, electroacoustic, Folkwang, CNSMDP" />
   <meta name="author" content="Jiaying He" />
   
   <!-- Open Graph (Facebook, LinkedIn) -->
   <meta property="og:title" content="Jiaying He | Contemporary Music Composer" />
-  <meta property="og:description" content="Chinese contemporary music composer based in Essen, Mannheim, and Paris." />
+  <meta property="og:description" content="Chinese contemporary music composer based in Essen, Mannheim, and Paris. Instrumental composition, electronics, and interdisciplinary practices." />
   <meta property="og:image" content="https://hejiaying-composer.de/images/profile.jpg" />
   <meta property="og:url" content="https://hejiaying-composer.de" />
   <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Jiaying He - Composer" />
   
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
@@ -26,7 +27,52 @@
   <!-- Canonical URL -->
   <link rel="canonical" href="https://hejiaying-composer.de" />
   
-  <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Jiaying He",
+    "jobTitle": "Composer",
+    "description": "Contemporary music composer specializing in instrumental composition, electronics, and interdisciplinary practices",
+    "url": "https://hejiaying-composer.de",
+    "sameAs": [
+      "https://soundcloud.com/8ghtlom8bgsd",
+      "https://www.instagram.com/jiaying_he_",
+      "https://www.facebook.com/share/1GERdRK27j"
+    ],
+    "image": "https://hejiaying-composer.de/images/profile.jpg",
+    "email": "jiayinghe.music@gmail.com",
+    "workLocation": [
+      {
+        "@type": "Place",
+        "name": "Essen, Germany"
+      },
+      {
+        "@type": "Place",
+        "name": "Mannheim, Germany"
+      },
+      {
+        "@type": "Place",
+        "name": "Paris, France"
+      }
+    ],
+    "alumniOf": [
+      {
+        "@type": "EducationalOrganization",
+        "name": "Conservatoire de Paris (CNSMDP)"
+      },
+      {
+        "@type": "EducationalOrganization",
+        "name": "Folkwang University of the Arts"
+      }
+    ],
+    "knowsAbout": ["Contemporary Music", "Composition", "Electronic Music", "Interdisciplinary Art"]
+  }
+  </script>
 </head>
 <body>
   <div id="root"></div>
