--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- SEO Meta Tags -->
   <title>Jiaying He | Contemporary Music Composer</title>
   <meta name="description" content="Jiaying He is a Chinese contemporary music composer based in Essen, Mannheim, and Paris. Her work integrates instrumental composition, electronics, and interdisciplinary practices including dance, video, and performance." />
-  <meta name="keywords" content="Jiaying He, composer, contemporary music, classical music, new music, Essen, Paris, Mannheim, composition, Chinese composer, electroacoustic, Folkwang, CNSMDP" />
+  <meta name="keywords" content="Jiaying He, composer, contemporary music, neue musik, female composer, classical music, new music, Essen, Paris, Mannheim, composition, Chinese composer, electroacoustic, Folkwang, CNSMDP" />
   <meta name="author" content="Jiaying He" />
   
   <!-- Open Graph (Facebook, LinkedIn) -->
