--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- SEO Meta Tags -->
   <title>Jiaying He | Contemporary Music Composer</title>
   <meta name="description" content="Jiaying He is a Chinese contemporary music composer based in Essen, Mannheim, and Paris. Her work integrates instrumental composition, electronics, and interdisciplinary practices including dance, video, and performance." />
-  <meta name="keywords" content="Jiaying He, composer, contemporary music, neue musik, female composer, classical music, new music, Essen, Paris, Mannheim, composition, Chinese composer, electroacoustic, Folkwang, CNSMDP" />
+  <meta name="keywords" content="Jiaying He, 何嘉莹, composer, contemporary music, neue musik, musique contemporaine, female composer, classical music, new music, Essen, Paris, Mannheim, composition, Chinese composer, electroacoustic, Folkwang, CNSMDP, Conservatoire de Paris, orchestral music, chamber music, electronic music, interdisciplinary art, compositeur" />
   <meta name="author" content="Jiaying He" />
   
   <!-- Open Graph (Facebook, LinkedIn) -->
@@ -28,7 +28,11 @@
   <link rel="canonical" href="https://hejiaying-composer.de" />
   
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" href="/favicon.ico" sizes="any" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
   
   <!-- JSON-LD Structured Data -->
   <script type="application/ld+json">
