--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   
   <!-- SEO Meta Tags -->
   <title>Jiaying He | Contemporary Music Composer</title>
-  <meta name="description" content="Jiaying He is a Chinese contemporary music composer based in Essen, Mannheim, and Paris. Her work integrates instrumental composition, electronics, and interdisciplinary practices including dance, video, and performance." />
+  <meta name="description" content="Jiaying He is a Contemporary music composer based in Essen, Mannheim, and Paris. Her work integrates instrumental composition, electronics, and interdisciplinary practices including dance, video, and performance." />
   <meta name="keywords" content="Jiaying He, 何嘉莹, composer, contemporary music, neue musik, musique contemporaine, female composer, classical music, new music, Essen, Paris, Mannheim, composition, Chinese composer, electroacoustic, Folkwang, CNSMDP, Conservatoire de Paris, orchestral music, chamber music, electronic music, interdisciplinary art, compositeur" />
   <meta name="author" content="Jiaying He" />
   
   <!-- Open Graph (Facebook, LinkedIn) -->
   <meta property="og:title" content="Jiaying He | Contemporary Music Composer" />
-  <meta property="og:description" content="Chinese contemporary music composer based in Essen, Mannheim, and Paris. Instrumental composition, electronics, and interdisciplinary practices." />
+  <meta property="og:description" content="Contemporary music composer based in Essen, Mannheim, and Paris. Instrumental composition, electronics, and interdisciplinary practices." />
   <meta property="og:image" content="https://hejiaying-composer.de/images/profile.jpg" />
   <meta property="og:url" content="https://hejiaying-composer.de" />
   <meta property="og:type" content="website" />
@@ -21,7 +21,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Jiaying He | Contemporary Music Composer" />
-  <meta name="twitter:description" content="Chinese contemporary music composer based in Essen, Mannheim, and Paris." />
+  <meta name="twitter:description" content="Contemporary music composer based in Essen, Mannheim, and Paris." />
   <meta name="twitter:image" content="https://hejiaying-composer.de/images/profile.jpg" />
   
   <!-- Canonical URL -->
